fixed white space

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -298,5 +298,7 @@
       
     z-index: 15;
   }
-  
+  .title{
+    margin-top: 7rem;
+  }
   }
