--- a/src/app/code/code.component.scss
+++ b/src/app/code/code.component.scss
@@ -33,6 +33,8 @@
   @media screen and (max-width: 575px) {
     h2{
       font-size: 3rem;
+      margin-top: 6rem;
+
     }
     h3 {
       margin: 0.5rem 0;
