--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -23,6 +23,7 @@ h2 {
 @media screen and (max-width: 575px) {
     h2 {
         font-size: 3rem;
+        margin-top: 5rem;
     }
     svg {
         filter: grayscale(0%);
